# aerolab

./: .gitignore  3D_PHASE0_DECISIONS.md  3D_PHASE0_FINDINGS.md  3D_RESEARCH_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  README.md  RELEASE_NOTES_v1.7.4.md  VALIDATION.md  app.py  handoff.md  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
.streamlit/: config.toml
components/: __init__.py
components/polygon_drawer/: __init__.py
components/polygon_drawer/frontend/: index.html
data/: validation_3d_sphere_re100.json  validation_3d_sphere_re100_d40.json  validation_3d_sphere_re100_d40_mysl.json  validation_3d_sphere_re100_lowblock.json  validation_3d_sphere_re20_mysl_d40.json  validation_3d_sphere_re20_stokes_regime.json
data/baked/: cube_aoa-15_re100.npz  cube_aoa-15_re40.npz  cube_aoa-30_re100.npz  cube_aoa-30_re40.npz  cube_aoa-45_re100.npz  cube_aoa-45_re40.npz  cube_aoa15_re100.npz  cube_aoa15_re40.npz  cube_aoa30_re100.npz  cube_aoa30_re40.npz  cube_aoa45_re100.npz  cube_aoa45_re40.npz  cube_re100.npz  cube_re40.npz  cylinder_re100.npz  cylinder_re20.npz  cylinder_re40.npz  naca0012_aoa-15_re100.npz  naca0012_aoa-15_re40.npz  naca0012_aoa-30_re100.npz  naca0012_aoa-30_re20.npz  naca0012_aoa-30_re200.npz  naca0012_aoa-30_re40.npz  naca0012_aoa-45_re100.npz  naca0012_aoa-45_re20.npz  naca0012_aoa-45_re200.npz  naca0012_aoa-45_re40.npz  naca0012_aoa-5_re100.npz  naca0012_aoa-5_re40.npz  naca0012_aoa10_re100.npz  naca0012_aoa10_re40.npz  naca0012_aoa15_re100.npz  naca0012_aoa15_re40.npz  naca0012_aoa30_re100.npz  naca0012_aoa30_re20.npz  naca0012_aoa30_re200.npz  naca0012_aoa30_re40.npz  naca0012_aoa45_re100.npz  naca0012_aoa45_re20.npz  naca0012_aoa45_re200.npz  (+40 more)
data/validation/: cylinder_re100_strouhal_lowblockage.json  long_time_cylinder_re100.json  results.json  results.md  results_lowblockage.json  results_lowblockage.md  results_resolved.json  results_resolved.md  results_smag_off_cyl_re100_resolved.md
docs/internal/: 3D_ACCURACY_PUSH_PLAN.md  LAUNCH_CHECKLIST.md  RELEASE_NOTES_v1.7.4.md  handoff.md  perfect_3d_plan.md  sphere_re20_drag_diagnosis.md
future-ideas/: cfd_convergence_predictor.md
scripts/: _3d_phase0_helpers.py  _make_baseline.py  bake_3d_field.py  day1_test.py  dev_3d_phase1_slice.py  dev_3d_phase1_tgv_gate.py  dev_3d_phase1_throughput.py  dev_3d_proto1_trt_vs_bgk.py  dev_3d_proto2_guo_mass.py  dev_3d_proto3_throughput.py  dev_3d_proto4_dtype.py  dev_3d_smoke.py  dev_grid_convergence.py  dev_lbm_gif_preview.py  dev_measure_cold_start.py  dev_measure_gif_size.py  dev_save_frame.py  dev_smag_off_resolved_re100.py  dev_validate_cfd.py  dev_validate_streamlines.py  diag_rendered_modes.py  final_ship_validation.py  lid_cavity_smoke.py  long_time_stability_cylinder.py  naca0012_aoa_polar.py  plot_cd_vs_re.py  polar_sweep.py  shape_gallery.py  smoke_cache_split.py  smoke_canvas_helper.py  smoke_gallery_click.py  smoke_streamlit.py  validate_2d_cylinder_strouhal_lowblockage.py  validate_3d_sphere_cd.py  validate_3d_sphere_cd_d40.py  validate_3d_sphere_cd_lowblock.py  validate_3d_sphere_cd_mysl_d40.py  validate_3d_sphere_cd_stokes_regime.py  validate_3d_sphere_cd_stokes_regime_mysl_d40.py  validate_conservation.py  (+3 more)
src/: airfoils.py  baked_fields.py  custom_shape.py  forces.py  forces_3d.py  lbm.py  lbm_3d.py  lbm_3d_bouzidi.py  lbm_3d_qcriterion.py  lbm_3d_smoke_particles.py  lbm_3d_trt.py  lbm_render.py  references.py  sample_shapes.py  shapes.py  voxelize.py  warmup.py
tests/: test_airfoils.py  test_app_re_banner.py  test_baked_fields.py  test_custom_shape.py  test_doc_validation_consistency.py  test_forces.py  test_forces_3d_mysl.py  test_lbm.py  test_lbm_3d_bouzidi.py  test_lbm_3d_outflow.py  test_lbm_3d_qcriterion.py  test_lbm_3d_smoke.py  test_lbm_3d_smoke_particles.py  test_lbm_3d_trt.py  test_lbm_render.py  test_openfoam_cross_check_consistency.py  test_references.py  test_shapes.py  test_validation_2d_cylinder_strouhal_lowblockage.py  test_validation_3d_sphere_cd.py  test_validation_3d_sphere_cd_d40.py  test_validation_3d_sphere_cd_lowblock.py  test_validation_3d_sphere_cd_mysl_d40.py  test_validation_3d_sphere_cd_stokes_regime.py  test_validation_3d_sphere_cd_stokes_regime_mysl_d40.py  test_validation_benchmark.py  test_validation_st.py  test_visual_regression.py  test_voxelize.py
validation/: compare_aerolab_vs_openfoam.py  cross_validation.md
validation/openfoam/cylinder_re100/: Allrun  README.md  diagnose.py
validation/openfoam/cylinder_re100/0/: U  p
validation/openfoam/cylinder_re100/constant/: momentumTransport  physicalProperties
validation/openfoam/cylinder_re100/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution
validation/simscale/cylinder_re100/: RUNBOOK.md
